[package]
name = "server"
version = "0.1.0"
authors = ["Andrew Welton <andrew.welton@magnetforensics.com>"]

[dependencies]
rocket = "0.3.4"
rocket_cors = "0.2.1"
rocket_codegen = "0.3.4"
rocket_contrib = "0.3.4"
serde = "1.0.24"
#serde_json = "1.0.8"
serde_derive = "1.0.24"
rusqlite = "0.13.0"
dotenv = "0.9.0"
